fix: Set overflow-x to hidden

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,3 +5,7 @@
 * {
     scroll-behavior: smooth;
 }
+
+body{
+    overflow-x: hidden;
+}
